# ImageProcessingLogoFinder

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Image.h  ImageMoments.cpp  ImageMoments.h  ImageProcessing.cpp  ImageProcessing.h  Makefile  Processing.cpp  Processing.h  README.md  cmake_install.cmake  main.cpp  open_cv  output.txt  processing.cpp  processing.h
doc/: processing.xml
